add simple footer

--- a/_layouts/landing.html
+++ b/_layouts/landing.html
@@ -16,6 +16,9 @@
         {{ content }}
     </main>
     
+    <footer>
+        {%include footer.html %}
+    </footer>
     <!-- JS -->
     <script src="{{ '/assets/js/script.js' | relative_url }}"></script>
 </body>
