--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -18,3 +18,12 @@ body {
     margin: 0;
     padding: 0;
 }
+
+footer {
+    background-color: var(--logo-color);
+    padding: 20px;
+    text-align: center;
+}
+footer p{
+    color: var(--muted);
+}
