--- a/assets/css/landing.css
+++ b/assets/css/landing.css
@@ -27,7 +27,6 @@ main {
 }
 
 .hero h1 {
-    font-family: 'Tangerine', cursive;
     font-size: 7rem;
     color: var(--accent-dark);
     margin: 0;
@@ -52,10 +51,10 @@ main {
     max-width: 100%;
 }
 .hero nav a {
-    position: relative; /* eeded for ::after to anchor properly */
+    position: relative; /* needed for ::after to anchor properly */
     text-decoration: none;
     font-weight: 600;
-    color: var(--accent-dark);
+    color: var(--accent);
     transition: color 0.3s ease;
 }
 /* underline animation */
