implement styled carousel showcasing recommended recipes

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>{{ page.title }} | Whisked Away</title>
 
+    <!-- Google Icons Link -->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
     <!-- CSS-->
     <link rel="stylesheet" href="{{ '/assets/css/main.css' | relative_url }}">
     <link rel="stylesheet" href="{{ '/assets/css/page.css' | relative_url }}">
@@ -13,7 +16,7 @@
 
 <body>
     <header>
-        {% include header.html %}
+        {% include header.html%}
     </header>
     <main>
         {{ content }}
