--- a/assets/css/page.css
+++ b/assets/css/page.css
@@ -1,8 +1,15 @@
+main {
+    max-width: 100vh;
+    margin: 2rem auto;
+    padding: 1rem; 
+    padding-top: 4rem;
+}
+
 header {
     display: grid;
     grid-template-columns: 1fr auto 1fr;
     align-items: center;
-    padding: 0 1rem;
+    padding: 0 3rem;
     height: 60px;
 }
 
@@ -14,13 +21,14 @@ header {
     align-items: center;
     justify-content: flex-start;
     transition: transform 0.3s ease;
+    font-size: 1.2rem;
 }
 .brand img {
     height: 30px;
     width: auto;
 }
 .brand:hover{
-    transform: scale(1.1);
+    transform: scale(1.05);
 }
 
 nav {
@@ -32,7 +40,7 @@ nav ul {
     list-style: none;
     display: flex;
     justify-content: center;
-    gap: 1rem;
+    gap: 3rem;
     padding: 0;
     margin: 0;
 }
@@ -40,6 +48,7 @@ nav a{
     position: relative; /* needed for ::after to anchor properly */
     text-decoration: none;
     color: var(--accent);
+    font-weight: 600;
     transition: color 0.3s ease;
 }
 /* underline animation */
@@ -59,4 +68,114 @@ nav a:hover {
 }
 nav a:hover::after {
     width: 100%;
+}
+
+/* recommended recipes section */
+.recommended {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    padding: 0 35px;
+}
+.recommended-header {
+    text-align: center;
+    margin-bottom: 1.5rem;
+}
+.recommended-header h2 {
+    color: var(--accent);
+    font-size: 2rem;
+    margin-bottom: 0.25rem;
+}
+.recommended-header .subtitle {
+    color: var(--muted);
+    font-size: 1rem;
+}
+.recommended-header .subtitle strong {
+    color: var(--highlight);
+    font-weight: bold;
+}
+
+.carousel-wrapper {
+    max-width: 1100px;
+    width: 100%;
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 0 2rem;
+}
+.carousel-wrapper .arrow {
+    background-color: var(--accent);
+    color: var(--white);
+    border: none;
+    border-radius: 50%;
+    width: 45px;
+    height: 45px;
+    font-size: 1.5rem;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.23);
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    z-index: 1;
+}
+.carousel-wrapper .arrow:hover {
+    background-color: var(--highlight);
+}
+.carousel-wrapper .arrow:first-child {
+    left: -22px;
+}
+.carousel-wrapper .arrow:last-child {
+    right: -22px;
+}
+.carousel-wrapper .carousel {
+    padding-left: 0px; /* so carousel.scrollLeft === 0 */
+    padding-right: 1px; /* so carousel.scrollLeft === carousel.scrollWidth - carousel.offsetWidth */
+    display: grid;
+    grid-auto-flow: column;
+    grid-auto-columns: calc((100% / 3) - 12px);
+    gap: 16px;
+    overflow-x: auto;
+    scroll-snap-type: x mandatory;
+    scroll-behavior: smooth;
+    scrollbar-width: 0;
+}
+.carousel::-webkit-scrollbar {
+    display: none;
+}
+.carousel :where(.card, .img) {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.carousel.no-transition {
+    scroll-behavior: auto;
+    transition: none;
+}
+
+.carousel .recipe-card {
+    scroll-snap-align: start;
+    height: 500px;
+    background: var(--highlight);
+    border-radius: 8px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
+    text-decoration: none;
+}
+.recipe-card img {
+    width: 100%;
+    height: 300px;
+    object-fit: cover;
+    border-radius: 8px;
+
+}
+.recipe-card h3 {
+    color: var(--text);
+    margin: 30px 0 5px;
 }
