--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,10 +1,7 @@
-<a href="/" class="brand">
-    <img src="{{ '/assets/images/whisked-away-logo-transparent.png' | relative_url }}" alt="Whisked Away logo" class="logo">
-    <h1>Whisked Away</h1>
-</a>
+{% include logo.html %}
 <nav>
     <ul>
-        <li><a href="/recipes/">view all recipes</a></li>
+        <li><a href="{{ '/recipes/' | relative_url }}">view all recipes</a></li>
         <li><a href="" class="cta-btn">Whisk Me Away!</a></li>
         <li><a href="">submit a recipe</a></li>
     </ul>
