--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -19,6 +19,50 @@ body {
     padding: 0;
 }
 
+main {
+    max-width: 800px;
+    margin: 0 auto;
+    padding: 1rem;
+    padding-top: 3rem;
+}
+
+
+header {
+    display: grid;
+    grid-template-columns: 1fr auto 1fr;
+    align-items: center;
+    padding: 0 3rem;
+    height: 60px;
+}
+
+.logo {
+    text-decoration: none;
+    color: var(--accent-dark);
+    grid-column: 1 / 2;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    transition: transform 0.3s ease;
+    font-size: 1.2rem;
+}
+.logo img {
+    height: 30px;
+    width: auto;
+}
+.logo:hover{
+    transform: scale(1.05);
+}
+
+.subtitle {
+    color: var(--muted);
+    font-size: 1rem;
+}
+.subtitle strong {
+    color: var(--highlight);
+    font-weight: bold;
+}
+
+
 footer {
     background-color: var(--logo-color);
     padding: 20px;
