--- a/_layouts/recipe.html
+++ b/_layouts/recipe.html
@@ -21,7 +21,7 @@
     <main>
         <article class="recipe">
 
-            <a href="/recipes" class="back-link">
+            <a href="/recipes/" class="back-link">
                 <span class="material-icons">chevron_left</span>
                 back to all recipes</a>
 
